--- a/emailclassificationsite/emailclassificationapp/templates/base.html
+++ b/emailclassificationsite/emailclassificationapp/templates/base.html
@@ -1,4 +1,16 @@
 <html>
+    {% load static %}
+    <head>
+        <meta charset="utf-8">
+        <title>Attention Email Classification</title>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        
+        <script src="{% static 'main.js' %}"></script> 
+        <script src="{% static 'api.js' %}"></script> 
+        <script src="https://kit.fontawesome.com/5edcca6b9d.js" crossorigin="anonymous"></script>
+    </head>
+
     <body>
         {% block body %}
         {% endblock body %}
