--- a/emailclassificationsite/emailclassificationapp/templates/index.html
+++ b/emailclassificationsite/emailclassificationapp/templates/index.html
@@ -1,5 +1,54 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<p>Hello, world!</p>
+<div class="container">
+
+    <nav class="navbar navbar-expand-xl navbar-dark bg-primary mb-2 rounded">
+        <i class="fas fa-envelope-square fa-3x mr-3" style="color: white"></i>
+        <a class="navbar-brand mr-auto" href="#">Attention Email Classification</a>
+        <i class="fas fa-circle-notch fa-spin fa-3x ml-auto d-none" id="loading" style="color: white"></i>
+    </nav>
+
+    <div class="container">
+        <div class="row bg-light p-3 rounded">
+            <div class="col">
+                <div class="row">
+                    <h3>Input Email</h3>
+                </div>
+
+                <div class="row">
+                    <p>Copy and paste your email text here</p>
+                </div>
+
+                <div class="row mb-2">
+                    <div class="input-group">
+                        <textarea class="form-control" aria-label="With textarea" rows="8" id="input"></textarea>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <button type="button" class="btn btn-primary ml-auto" onclick="classifier();">Submit</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row d-none" id="output_row">
+            <div class="col">
+                <div class="row">
+                    <h3>Spam or Ham?</h3>
+                </div>
+
+                <div class="row">
+                    <p class="text-danger" id="spamOrHam">Spam</p>
+                </div>
+
+                <div class="row">
+                    <div id="output">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
 {% endblock body %}
