--- a/emailclassificationsite/emailclassificationapp/templates/base.html
+++ b/emailclassificationsite/emailclassificationapp/templates/base.html
@@ -6,9 +6,14 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         
+        <script src="{% static 'cdn-cache/jquery-3.4.1.min.js' %}"></script>
+        <script src="https://kit.fontawesome.com/5edcca6b9d.js" crossorigin="anonymous"></script>
+
         <script src="{% static 'main.js' %}"></script> 
         <script src="{% static 'api.js' %}"></script> 
-        <script src="https://kit.fontawesome.com/5edcca6b9d.js" crossorigin="anonymous"></script>
+
+        <!-- csrf -->
+        <span id="csrftoken">{% csrf_token %}</span>
     </head>
 
     <body>
