Finished web interface

--- a/emailclassificationsite/emailclassificationapp/templates/index.html
+++ b/emailclassificationsite/emailclassificationapp/templates/index.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="row">
-                    <p class="text-danger" id="spamOrHam">Spam</p>
+                    <p id="spamOrHam"></p>
                 </div>
 
                 <div class="row">
@@ -50,5 +50,63 @@
             </div>
         </div>
     </div>
-  </div>
+</div>
+<style>
+    .highlight-green-1 {
+        background-color: rgb(215, 255, 215);
+    }
+    .highlight-green-2 {
+        background-color: rgb(175, 255, 175);
+    }
+    .highlight-green-3 {
+        background-color: rgb(135, 255, 135);
+    }
+    .highlight-green-4 {
+        background-color: rgb(95, 255, 95);
+    }
+    .highlight-green-5 {
+        background-color: rgb(55, 255, 55);
+    }
+    /* .highlight-green-6 {
+        background-color: rgb(64, 255, 64);
+    }
+    .highlight-green-7 {
+        background-color: rgb(49, 255, 49);
+    }
+    .highlight-green-8 {
+        background-color: rgb(34, 255, 34);
+    }
+    .highlight-green-9 {
+        background-color: rgb(19, 255, 19);
+    } */
+
+    .highlight-red-1 {
+        background-color: rgb(255, 215, 215);
+    }
+    .highlight-red-2 {
+        background-color: rgb(255, 175, 175);
+    }
+    .highlight-red-3 {
+        background-color: rgb(255, 135, 135);
+    }
+    .highlight-red-4 {
+        background-color: rgb(255, 95, 95);
+    }
+    .highlight-red-5 {
+        background-color: rgb(255, 55, 55);
+    }
+    /* }
+    .highlight-red-6 {
+        background-color: rgb(255, 64, 64);
+    }
+    .highlight-red-7 {
+        background-color: rgb(255, 49, 49);
+    }
+    .highlight-red-8 {
+        background-color: rgb(255, 34, 34);
+    }
+    .highlight-red-9 {
+        background-color: rgb(255, 19, 19);
+    } */
+</style>
 {% endblock body %}
